Add SQL migration to create purchase order number sequence